--- a/yummypizza.html
+++ b/yummypizza.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <title>Pizza</title>
+    <script src="cookies.js"></script>
 
 </head>
-<body>
+<body onload="checkCookie()">
     <h1>Pizza Shop</h1>
     <h2>We have the best pizzas in the world for the biggest price!</h2>
     <div class="row">
