--- a/evilsite.html
+++ b/evilsite.html
@@ -9,13 +9,11 @@
 <body>
     <h1>Evil Site</h1>
     <h2>I will hack you</h2>
-    <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="submit" id="lname" name="lname">
-    </form>
 
+    <form id="form" action="yummypizza.html" method="get">
+        <input type="submit" value="Click Me!">
+    </form>
+    <br>
     <img src="https://thehackernews.com/new-images/img/b/R29vZ2xl/AVvXsEhnQTb9c37oIq1N1Nl5cl3P_EmLuBg_PsgwIkGlmllAPJlLveaa48R1PPt-EoWQjOAooqqSRBbphmoj4kQYangDxBdpe9S0HfgifjDbywHpYx8q-cjYkqvTjbaoz3Ew-fqozgtv7FOVbrfcHvQvgkWMLyOwD0Y6bLD4DYgnzfPgHVNeCO1KtThcvzV4Kg/s728-e365/cyberattack.jpg">
 </body>
 </html>
