--- a/evilsite.html
+++ b/evilsite.html
@@ -10,7 +10,7 @@
     <h1>Evil Site</h1>
     <h2>I will hack you</h2>
 
-    <form id="form" action="yummypizza.html" method="get">
+    <form id="form" action="yummypizza.html?price=1$&value=p1" method="get">
         <input type="submit" value="Click Me!">
     </form>
     <br>
