--- a/yummypizza.html
+++ b/yummypizza.html
@@ -21,7 +21,7 @@
         </div>
         <div class="column">
           <img src="https://media.onebite.app/b1/a8/1d/41/b1a81d41-4d20-4f1b-8c78-4f3196e0eb4f.jpg" alt="Forest" style="width:100%">
-          <h1>Marshmellow Delicacy</h1>
+          <h1>Marshmallow Delicacy</h1>
           <h1 id="p2">100$</h1>
         </div>
         <div class="column">
@@ -41,7 +41,7 @@
     </script>
     <script>
         if ("price" in params && "value" in params && whoami() == "Todd"){
-            document.getElementById(params["price"]).innerHTML = params["value"];
+            document.getElementById(params["value"]).innerHTML = params["price"];
         }
     </script>
     
